syntax = "proto3";

option csharp_namespace = "artiso.AdsdHotel.Red.Contracts.Grpc";

package rates;


service Rates {
  rpc GetRoomRatesByRoomType (GetRoomRatesByRoomTypeRequest) returns (GetRoomRatesByRoomTypeReply);
  rpc InputRoomRates (InputRoomRatesRequest) returns (InputRoomRatesReply);
}

message GetRoomRatesByRoomTypeRequest {
  string room_type = 1;
  Date start_date = 2;
  Date end_date = 3; 
}

message GetRoomRatesByRoomTypeReply {
  repeated RoomRate room_rates  = 1;
}

message RoomRate {
  string id = 1;
  repeated RoomItem rate_items  = 2;
  CancellationFee cancellation_fee = 3;
  float total_price = 4;
}

message RoomItem {
  string id = 1;
  float price = 2;
}

message InputRoomRatesRequest {
  string order_id = 1;
  Date start_date = 2;
  Date end_date = 3; 
  repeated RoomItem rate_items = 4;
}

message InputRoomRatesReply {
    bool success = 1;
    string error_message = 2;
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message CancellationFee {
    Date dead_line = 1;
    float fee_in_percentage = 2;
}
